--- a/src/app/view/pagamento/pagamento.component.html
+++ b/src/app/view/pagamento/pagamento.component.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="col-12 text-right button-group">
-                <button type="button" [routerLink]="['/recibos', {idTempo: tempo.id, idPagamento: pagamento.id}]" class="btn btn-success" (click)="salvar()"><i class="bi bi-floppy2 icon-margin-right"></i>Efetuar Pagamento</button>
+                <button type="button" [routerLink]="['/recibos', tempo.id,pagamento.id]" class="btn btn-success" (click)="salvar()"><i class="bi bi-floppy2 icon-margin-right"></i>Efetuar Pagamento</button>
             </div>
 
     </form>
