--- a/src/app/view/recibo/recibo.component.html
+++ b/src/app/view/recibo/recibo.component.html
@@ -1,3 +1,15 @@
-<p>recibo works!</p>
-<h1>Id do tempo: {{tempo}}</h1>
-<h1>Id do pagamento: {{pagamento}}</h1>
+<h1 align="center">Pagamento</h1>
+<div class="text-space" style="list-style-position: inside;" align="center">
+<ul>
+    <li>Id do Recibo: {{pagamento.id}}</li>
+    <li>Nome do Condutor: {{condutor.nomeCompleto}}</li>
+    <li>CPF: {{condutor.cpf}}</li>
+    <li>Placa do veículo: {{veiculo.placa}}</li>
+    <li>Modelo do veículo: {{veiculo.marca}}</li>
+    <li>Marca do  veículo: {{veiculo.modelo}}</li>
+    <li>Valor Pago: R${{pagamento.valorPago}}</li>
+    <li>Tempo Utilizado: {{pagamento.tempoUtilizado}} Hs</li>
+    <li>Horário Inicial: {{tempo.dataHoraInserido}}</li>
+    <li>Horário Final: {{tempo.dataHoraFinalizado}}</li>
+</ul>
+</div>
